prometheus-agent-mode/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
