prometheus-agent-mode/base/prometheus-server.yaml
# Service for agents to remote-write to
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    prometheus: prometheus-server
    app.kubernetes.io/name: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: 9090
      protocol: TCP
